--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,8 +32,10 @@ jobs:
         run: pnpm build
         working-directory: packages/core
 
+      - name: Create .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
+        working-directory: packages/core
+
       - name: Publish to NPM
         run: pnpm publish --access public --no-git-checks
         working-directory: packages/core
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
